Fix immutable lists Sonar warnings.